New finalized project 3

--- a/html/doxygen_crawl.html
+++ b/html/doxygen_crawl.html
@@ -11,9 +11,11 @@
 <a href="_load_balancer_8h_source.html"/>
 <a href="_request_8h_source.html"/>
 <a href="_web_server_8h_source.html"/>
+<a href="_load_balancer_8cpp.html"/>
 <a href="_load_balancer_8h.html"/>
 <a href="main_8cpp.html"/>
 <a href="_request_8h.html"/>
+<a href="_web_server_8cpp.html"/>
 <a href="_web_server_8h.html"/>
 <a href="class_load_balancer.html"/>
 <a href="class_load_balancer-members.html"/>
@@ -34,6 +36,14 @@
 <a href="functions.html"/>
 <a href="functions.html"/>
 <a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
+<a href="functions.html"/>
 <a href="functions_func.html"/>
 <a href="functions_func.html"/>
 <a href="functions_func.html"/>
@@ -43,40 +53,71 @@
 <a href="functions_func.html"/>
 <a href="functions_func.html"/>
 <a href="functions_func.html"/>
+<a href="functions_func.html"/>
+<a href="functions_func.html"/>
+<a href="functions_vars.html"/>
+<a href="functions_vars.html"/>
+<a href="functions_vars.html"/>
+<a href="functions_vars.html"/>
+<a href="functions_vars.html"/>
+<a href="functions_vars.html"/>
+<a href="functions_vars.html"/>
+<a href="functions_vars.html"/>
+<a href="functions_vars.html"/>
+<a href="functions_vars.html"/>
 <a href="files.html"/>
 <a href="globals.html"/>
 <a href="globals_func.html"/>
+<a href="_load_balancer_8cpp.html"/>
 <a href="_load_balancer_8h.html"/>
 <a href="_request_8h.html"/>
+<a href="_web_server_8cpp.html"/>
 <a href="_web_server_8h.html"/>
 <a href="annotated.html"/>
 <a href="class_load_balancer.html"/>
 <a href="class_load_balancer.html#a0c9ed4281450182c76b710a583487363"/>
+<a href="class_load_balancer.html#a1bd80f5a24a60be7d6ef6b985d757644"/>
+<a href="class_load_balancer.html#a37deab32b1f570fe02197b9b889c75d2"/>
+<a href="class_load_balancer.html#a40fe4b2c6d75520b3309def428bc38ac"/>
 <a href="class_load_balancer.html#a4fdab3b7fd1babc229f123515f930108"/>
+<a href="class_load_balancer.html#a616e9fd3eb82d23431bedbf1d23aec42"/>
 <a href="class_load_balancer.html#a62df7b94c22e8e16b22d2cd758b7824e"/>
-<a href="class_load_balancer.html#a7e1d150d3d33fd80dea013b9ceaa08e7"/>
+<a href="class_load_balancer.html#a69951a7bb77be7fafd4d5ad6919abd80"/>
+<a href="class_load_balancer.html#a7e4a8fb719ab4f914083d7378ea52927"/>
+<a href="class_load_balancer.html#a95804a99d62dee4a29c5b983ff208747"/>
+<a href="class_load_balancer.html#a9ddb96858e2e8c287cedc33f0ea171f3"/>
+<a href="class_load_balancer.html#aca26571c562e03e4e7d140cc7653078d"/>
 <a href="class_load_balancer.html#ae03a6669a9dfc19c26f20811f70e2c9c"/>
 <a href="class_load_balancer.html#ae50e1209506da4b238b8aec9d122cbe3"/>
 <a href="class_load_balancer.html#ae56b9a73ddcdb52980d5390f2ba7bd69"/>
+<a href="class_load_balancer.html#afcd63b869bc356291b79094ffd0a2317"/>
 <a href="class_web_server.html"/>
 <a href="class_web_server.html#a042ce4043bf520c52562a5479e739ea1"/>
+<a href="class_web_server.html#a1a0a29895986ab3558a638bc75f41259"/>
 <a href="class_web_server.html#a2739c1973665a9fd920dce691a12b9e5"/>
 <a href="class_web_server.html#a2d2f99247da1b35f9ece4e3336eb25b5"/>
-<a href="class_web_server.html#a3dc0403ae54b9072865b36a57d7fd6a7"/>
+<a href="class_web_server.html#a363b73b2e4e2afc0879ff35dc43965ae"/>
 <a href="class_web_server.html#a5044757cd8574d3f62a7eec5d51fb00f"/>
 <a href="class_web_server.html#a8ae4e3ccb02d05fa3d9d759f9b3ae32d"/>
+<a href="class_web_server.html#a920f994a9c018d2a8500734f33d568fd"/>
 <a href="class_web_server.html#abd6f635df17582c0e01767eb5c4bf1ec"/>
-<a href="class_web_server.html#ac60d87304956ad48b25b261b9b164323"/>
+<a href="class_web_server.html#ae89ed239bc1cadb5897e90cddeb8e116"/>
+<a href="class_web_server.html#afa1ec23ac136a1b7cfd05262084c820c"/>
 <a href="classes.html"/>
 <a href="files.html"/>
 <a href="functions.html"/>
 <a href="functions_func.html"/>
+<a href="functions_vars.html"/>
 <a href="globals.html"/>
 <a href="globals_func.html"/>
 <a href="main_8cpp.html"/>
 <a href="main_8cpp.html#ae66f6b31b5ad750f1fe042a706a4e3d4"/>
 <a href="struct_request.html"/>
+<a href="struct_request.html#a3cfb576ed0b5e08612f3de8bc7cd72e2"/>
+<a href="struct_request.html#a3f7eb9694fb80ef13bc3abbfa4adfc0d"/>
 <a href="struct_request.html#a63f5c571f24f824805adc508d6fca4bf"/>
+<a href="struct_request.html#a7caad431f773660f46ccbc68b8836116"/>
+<a href="struct_request.html#ad49a0f18615ea50f9a11cd2494c93044"/>
 <a href="struct_request.html#afaf8d8928de7ffff8a3767589489bd33"/>
 </body>
 </html>
